--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
+    "server": "json-server --watch db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/norf-90/parcel-template#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
+    "json-server": "^0.17.1",
     "parcel": "^2.8.2"
   }
 }
